--- a/src/public/scss/header/header.scss
+++ b/src/public/scss/header/header.scss
@@ -1,7 +1,5 @@
 .header {
 	display: flex;
-	overflow: hidden;
-
 	&__navigation {
 		padding-top: 57px;
 		padding-left: 81px;
